--- a/test.css
+++ b/test.css
@@ -1,40 +1,24 @@
-/*p:first-letter{*/
-    /*font-size: 36px;*/
-/*}*/
-/*.before-test:before{*/
-    /*content:url(images/book.png);*/
-/*}*/
-/*.after-test:after{*/
-    /*content:attr(data-code);*/
-/*}*/
-/*.before-counter h1{*/
-    /*counter-reset: subsection;*/
 
-/*}*/
-/*.before-counter h1:before{*/
-    /*counter-increment: section;*/
-    /*content:"Section" counter(section)".";*/
-/*}*/
-/*.before-counter h2:before{*/
-    /*counter-increment:subsection;*/
-    /*content:counter(section)"."counter(subsection)"";*/
-/*}*/
-/*.before-counter h3:before{*/
-    /*counter-increment:subsection;*/
-    /*content:counter(section)"."counter(subsection)"";*/
-/*}*/
-body {
-    /*content: "Section" counter(section) "."*/
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+.em-container{
+    background-color: #2d2d2d;
+    width: 80vw;
+    height: 50vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
 }
-/*!**!.by-index>li:nth-child(5){*!*/
-/*!*background-color: #8C2106;*!*/
-/*!*}*/
-/*.by-index>li:nth-child(even){*/
-    /*background-color: #3ead3c;*/
-/*}*/
-.by-index>li:nth-last-child(2n+1){
-    background-color: #919aa0;
+
+
+.item {
+    background-color: #22b4f6;
+    width: 12vw;
+    height: 8vh;
 }
+
+
+
+
+
+
