--- a/learnFlex/style/pc.css
+++ b/learnFlex/style/pc.css
@@ -25,7 +25,7 @@
     font-style: italic;
     font-family: Arial;
     font-weight: bold;
-    margin-left: 1.5vh;
+    margin-left: 4vw;
     bottom: 0;
 }
 .desktopName span{
@@ -40,6 +40,7 @@
     position: absolute;
     display: flex;
     bottom: 7vh;
+    visibility: hidden;
 }
 .function span{
     color: white;
@@ -236,5 +237,18 @@
     color:white;
     font-size: 1.5vw;
 }
+.desktop-container input[type=checkbox],label{
+    position: absolute;
+    bottom: 1vh;
+    left: 1vw;
+}
+.desktop-container input[type=checkbox]{
+    left:-2vw;
+}
+:checked~ .function-container{
+    visibility: visible;
+}
+
+
 
 
